--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
     script: |
       # Write your PowerShell commands here.
       ls
+      Get-Content -Path ./README.md
       Write-Host "Hello World"
 
 
